k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  selector:
    app: ui
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
